--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "weather-package-cli",
+  "name": "weather-package-cli-demo",
   "version": "1.0.0",
   "description": "CLI for getting weather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "engines": {
     "node": ">14"
   },
   "scripts": {
-    "start": "node.js index.js",
+    "start": "node.js weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -25,5 +28,10 @@
   "bugs": {
     "url": "https://google.com",
     "email": "larionovra@gmail.com"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "chalk": "^5.3.0",
+    "dedent-js": "^1.0.1"
   }
 }
